# vpn-dispatcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ansible.cfg  pyproject.toml
ansible/: clients.yml  deploy.yml  operate.yml  prepare_awg.yml
ansible/templates/: docker-compose.yml.j2
container/: __init__.py  common.py  entrypoint.py  healthcheck.py  network.py
container/egress/: README.md  __init__.py  _cisco_vpnc.py  awg.py  base.py  cisco.py  forti.py  registry.py  utils.py  wireguard.py
scripts/: __init__.py  add_clients.py  cisco_reconnect.py  deploy.py  destroy.py  forti_reconnect.py  list_clients.py  logs.py  remove_clients.py  restart.py  status.py
scripts/lib/: __init__.py  ansible.py  client_cli.py  clients.py  forti_saml.py  remote.py  render_awg_in.py  settings.py
